# masters-thesis-app

./: Dockerfile  pyproject.toml  start.sh
app/: application.py  gunicorn_conf.py  main.py
app/config/: config.py
app/controller/: camera.py  health.py
app/domain/: face_detector.py  sentiment_analyzer.py
app/models/sentiment_analysis/: label_encoder.pkl
app/router/: router.py
app/static/: index.html
