[tool.poetry]
name = "masters-thesis-app"
version = "0.1.0"
description = ""
authors = ["Diogo Alves <alves.diogo@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
websockets = "^13.0.1"
torchvision = "0.19.0"
scikit-learn = "^1.5.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
